project_20/solution1/.autopilot/db/bram_A.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:29346:7: warning: Added loop label VITIS_LOOP_1211_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1211_1: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:29346:7: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:30320:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:30320:5: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:30334:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:30334:5: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:30348:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:30348:5: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:31959:7: warning: Added loop label VITIS_LOOP_1245_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1245_1: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:31959:7: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33748:46: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=bram1 type=ram_1p impl=bram
                                             ^
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33751:46: error: Invalid Directive: for current device, ram_1p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=bram2 type=ram_1p impl=bram
                                             ^
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33755:4: warning: Added loop label VITIS_LOOP_21_1:   [xilinx-label-all-loops]
   for ( i = 0; i < 64; i++) {
   ^~~
   VITIS_LOOP_21_1: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33755:4: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33767:3: warning: Added loop label VITIS_LOOP_33_2:   [xilinx-label-all-loops]
  for (j= 0; j < 8; j++) {
  ^~~
  VITIS_LOOP_33_2: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33767:3: note: FIX-IT applied suggested code changes
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33772:3: warning: Added loop label VITIS_LOOP_38_3:   [xilinx-label-all-loops]
  for (j= 0; j < 8; j++) {
  ^~~
  VITIS_LOOP_38_3: 
C:\Users\velic\AppData\Roaming\Xilinx\Vitis\project_20\solution1\.autopilot\db\bram_A.pp.0.cpp:33772:3: note: FIX-IT applied suggested code changes
